css/main.css
* {
  margin: 0;
  padding: 0;
}
body {
  background-color: #FFF;
  font: 14px Avenir, Helvetica, Arial, sans-serif;
  text-align: center;
}
h1 {
  font-size: 47px;
}
h2 {
  font-size: 35px;
}
h3 {
  font-size: 31px;
  margin-bottom: 0.5em;
}
h4 {
  font-size: 23px;
  margin-bottom: 0.5em;
}
ol, ul, p {
  margin: 1em 0;
}
a {
  color: #00a;
}
a:hover {
  color: #000;
}
a:visited {
  color: #a0a;
}
.back {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 270px;
  background: url("/images/index_back.jpg") no-repeat 0% 50%;
  background-size: cover;
}
/*****************************************************************************/

/*
/* Home
/*
/*****************************************************************************/
 .posts {
  list-style-type: none;
  margin-bottom: 2em;
}
.posts a {
  color: #307EA9;
}
.posts li {
  line-height: 1.75em;
}
.posts span {
  color: #aaa;
  font-family: Monaco, "Courier New", monospace;
  font-size: 80%;
}
.post-date {
  font-size: 0.8em;
  color: #a1a1a1;
}
/*****************************************************************************/

/*
/* Site
/*
/*****************************************************************************/
 .post-title {
  margin-top: 20px;
}
.clrfix {
  clear: both;
}
.site {
  font-size: 115%;
  text-align: left;
  width: 42em;
  margin: 3em auto 2em;
  line-height: 1.5em;
}
.left {
  float: left;
}
.site .caption {
  margin: 20px 0;
  font-size: 2em;
  line-height: 1.5em;
}
.site .caption img {
  margin-bottom: 11px;
  margin-left: 1px;
}
.site .caption .ruby-sup {
  background: url("/images/ruby_sup.png") no-repeat 100% -50%;
}
.header .left .title {
  font-size: 24px;
}
.right {
  float: right;
}
.header .right ul li {
  list-style: none;
  display: inline;
}
.header a {
  font-weight: bold;
  text-decoration: none;
}
.title {
  display: inline-block;
}
a.title {
  color: #a00;
}
a.title :hover {
  color: #000;
}
.header a.extra {
  color: #aaa;
  margin-left: 1em;
}
.header a.extra:hover {
  color: #000;
}
.meta {
  color: #aaa;
}
.footer {
  font-size: 80%;
  color: #666;
  border-top: 4px solid #eee;
  margin-top: 2em;
  padding-bottom: 20px;
  overflow: hidden;
}
.footer .contact {
  margin-top: 20px;
  text-align: center;
}
.footer .contact ul li {
  font-size: 2em;
  list-style: none;
  display: inline;
  margin-left: 10px;
}
.footer .contact a {
  color: #e1e1e1;
}
.footer .contact a:hover {
  color: #666;
}
/*****************************************************************************/

/*
/* Posts
/*
/*****************************************************************************/

/* standard */
 .post {
  font-size: 18px;
  line-height: 140%;
}
.post pre {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .4em;
}
.post ul, .post ol {
  margin-left: 1.35em;
}
.post code {
  border: 1px solid #ddd;
  background-color: #eef;
  padding: 0 .2em;
}
.post pre code {
  border: none;
}
blockquote {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  margin: 1.6em 0 1.6em -2.2em;
  padding: 0 0 0 1.6em;
  border-left: #4a4a4a 0.4em solid;
}
blockquote p {
  margin: 0.8em 0;
  font-style: italic;
}
blockquote small {
  display: inline-block;
  margin: 0.8em 0 0.8em 1.5em;
  font-size:0.9em;
  color: #ccc;
}
blockquote small:before {
  content:'\2014 \00A0';
}
blockquote cite {
  font-weight:bold;
}
blockquote cite a {
  font-weight: normal;
}

@media only screen and (max-width: 900px) {
  .back {
    display: none;
  }
  .site {
    width: 90%;
    margin-left: 10px;
    margin-right: 10px;
  }
  blockquote {
    margin-left: 0;
  }
  h1 {
    font-size: 4.8rem;
    text-indent: -2px;
  }
  h2 {
    font-size: 3.8rem;
  }
  h3 {
    font-size: 3.3rem;
  }
  h4 {
    font-size: 2.8rem;
  }
}

@media only screen and (max-width: 500px) {
  .back {
    display: none;
  }
  .site {
    width: 100%;
    margin-left: 10px;
    padding-right: 10px;
  }
  .post {
    width:auto;
    margin-left: 16px;
    margin-right: 16px;
    font-size: 0.8em;
    line-height: 1.6em;
  }
  h1, h2 {
    font-size: 3rem;
    line-height: 1.1em;
    letter-spacing: -1px;
  }
  h3 {
    font-size: 2.8rem;
  }
  h4 {
    font-size: 2.3rem;
  }
}

